Few edits, tried adding mustache template

--- a/trips/snowvalley.html
+++ b/trips/snowvalley.html
@@ -9,11 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>San Diego - Brian's Adventures</title>
+    <title>Snow Valley - Brian's Adventures</title>
 
     <!-- sets a different background picture on each page -->
     <style type="text/css">
-        header {background-image:url(../img/sandiego/sandiego_main.jpg);"}
+        header {background-image:url(../img/header.jpg);"}
     </style>
 
     <!-- Bootstrap Core CSS -->
@@ -81,7 +81,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">San Diego, California</h1>
+                <h1 id="homeHeading">Snow Valley Mountain Resort, California</h1>
                 <hr>
                 <p></p>
                 <a href="#begin" class="btn btn-primary btn-xl page-scroll">Let's begin</a>
@@ -95,9 +95,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">How It All Began</h2>
                     <hr class="light">
-                    <p class="text-faded">Ahh America's Finest City. They don't call San Diego that for no reason.
-
-                    L3 internship, barely got it. Brian Chin also here. Got paid and got laid haha</p>
+                    <p class="text-faded"></p>
                 </div>
             </div>
         </div>
@@ -109,9 +107,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Trip</h2>
                     <hr class="light">
-                    <p class="text-faded">I guess this was more of a three month trip, but I had never spent the summer in San Diego and I actually had a car with me this time (unlike during the school year) so I had a lot more freedom to do what I wanted.
-
-                    July 4 bbq, soccer and world cup, FOOOOOD Adrienne and the two best weekends of my life, Briana, Victoria</p>
+                    <p class="text-faded"></p>
                 </div>
             </div>
         </div>
@@ -130,32 +126,21 @@
                       <div class="carousel-inner" role="listbox">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                            <li data-target="#myCarousel" data-slide-to="3"></li>
                         </ol>
                       
                         <figure class="item active text-faded">
-                          <img src="../img/header.jpg" alt="Chania">
-                            <figcaption>The atmosphere in Chania has a touch of Florence and Venice.</figcaption>
+                          <img src="../img/tokyo/slideshow/1.jpg">
+                            <figcaption>First meal on the flight: grilled salmon with Japanese omelette.</figcaption>
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/header.jpg" alt="Chania">
-                            <figcaption>The atmosphere in Chania has a touch of Florence and Venice.</figcaption>
+                          <img src="../img/tokyo/slideshow/2.jpg">
+                            <figcaption>Second meal on the flight: grilled beef sirloin.</figcaption>
                         </figure>
-
-                        <figure class="item text-faded">
-                          <img src="../img/header.jpg" alt="Flower">
-                            <figcaption>Beautiful flowers in Kolymbari, Crete.</figcaption>
-                        </figure>
-
-                        <figure class="item text-faded">
-                          <img src="../img/header.jpg" alt="Flower">
-                            <figcaption>Beautiful flowers in Kolymbari, Crete.</figcaption>
-                        </figure>
-                      </div>
 
                       <!-- Left and right controls -->
                       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -170,7 +155,7 @@
                 </div>
             </div>
         </div>
-    <br><br>
+    <br><br><br><br><br>
     </section>
 
     <section class="bg-dark" id="highlights">
@@ -181,9 +166,6 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p>Jon coming back from England study abroad and we drank beers behind the canyon at Warren.</p></li>
-                            <li><p>Living so close to the freeway and all the Asian food in Convoy area</p></li>
-                            <li><p>Living so close to work. Not even a 10 minute drive local time.</p></li>
                             <li><p></p></li>
                         </ul>
                     </p>
@@ -200,9 +182,6 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p>9/80 schedule</p></li>
-                            <li><p>Hanging out with Brian all the time</p></li>
-                            <li><p>I was just confident with where I was in my life at the time. I was at peace with all the decisions I made. There was just so much spontaneity. I felt young and alive and I had so much fun.</p></li>
                             <li><p></p></li>
                         </ul>
                     </p>
@@ -219,7 +198,7 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p>I got sunburnt one time. That's about it.</p></li>
+                            <li><p></p></li>
                         </ul>
                     </p>
                 </div>
@@ -235,9 +214,6 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p>The food. Tacos el Gordo, Phil's, Oscar's, Bahn Thai, Vallarta. This is our tier one list of places to go and you need to go. Gordos, Phil's, and Oscar's are consistently on Yelp's Top 100 restaurants lists. Bahn Thai and Vallarta are San Diego local secrets. You're welcome.</p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
                             <li><p></p></li>
                         </ul>
                     </p>
@@ -252,7 +228,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Final Thoughts</h2>
                     <hr class="light">
-                    <p class="text-faded">I call this summer the best summer of my life, and I hope you know why now. When I'm older, I'll think back to this summer as THE summer to remember. I'll tell my grandkids about this summer. I still look back at pictures sometimes because I just miss it that much. Everything was just perfect. I'll remember this summer for the rest of my life and this website will help me preserve those memories. <i class="fa fa-square-o" aria-hidden="true"></i></p>
+                    <p class="text-faded"> <i class="fa fa-square-o" aria-hidden="true"></i></p>
                     <br><br><a href="../index.html#adventures" class="btn btn-default btn-xl page-scroll">Back to all adventures</a>
                 </div>
             </div>
@@ -273,7 +249,6 @@
 
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
-    <script src="main.js"></script>
 </body>
 
 </html>
