--- a/trips/tokyo.html
+++ b/trips/tokyo.html
@@ -46,7 +46,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+<!--                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#begin">How It All Began</a>
                     </li>
@@ -57,7 +57,7 @@
                         <a class="page-scroll" href="#pictures">Pictures</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#highlights">The Highlights</a>
+                        <a class="page-scroll" href="#highlights">The Good Times</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#likes">What I Liked</a>
@@ -70,8 +70,8 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#final">Final Thoughts</a>
-                    </li>
-                </ul>
+                    </li> 
+                </ul> -->
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -600,7 +600,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Final Thoughts</h2>
                     <hr class="light">
-                    <p class="text-faded">This was a great first trip to dip my feet in. I loved everything about my experience in Japan, and I would definitely go again. I would want to go to a country that I haven't been to first before going back to Japan, but if I went again, I would live in another area but definitely do most of the things I did last time. But of course, the company matters so much and I'm glad I went with people I got along with and I didn't ruin relations with them, especially my boss :) I can't wait to continue going on more trips. We already decided on going to Cuba next, so we'll see where that takes us. Most of all, I miss the food in Japan so much and would go only for the cheap food and drinks. Ramen + Sushi + Yakitori = Life <i class="fa fa-square-o" aria-hidden="true"></i></p>
+                    <p class="text-faded">This was a great first trip to dip my feet in. I loved everything about my experience in Japan, and I would definitely go again. I would want to go to a country that I haven't been to first before going back to Japan, but if I went again, I would live in another area but definitely do most of the things I did last time. But of course, the company matters so much and I'm glad I went with people I got along with and I didn't ruin relations with them, especially my boss :) I can't wait to continue going on more trips. We already decided on going to Cuba next, so we'll see where that takes us. Most of all, I miss the food in Japan so much and would go only for the cheap food and drinks. Ramen + Sushi + Yakitori + Whiskey = Life <i class="fa fa-square-o" aria-hidden="true"></i></p>
                     <br><br><a href="../index.html#adventures" class="btn btn-default btn-xl page-scroll">Back to all adventures</a>
                 </div>
             </div>
@@ -621,6 +621,8 @@
 
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
