--- a/trips/magiq.html
+++ b/trips/magiq.html
@@ -46,7 +46,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+<!--                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#begin">How It All Began</a>
                     </li>
@@ -72,7 +72,7 @@
                         <a class="page-scroll" href="#final">Final Thoughts</a>
                     </li>
                 </ul>
-            </div>
+ -->            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
@@ -278,6 +278,8 @@
 
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
