Tried something again

--- a/trips/tokyo.html
+++ b/trips/tokyo.html
@@ -622,7 +622,7 @@
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
 
 </html>
