--- a/trips/magiq.html
+++ b/trips/magiq.html
@@ -279,7 +279,7 @@
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
 
 </html>
