--- a/trips/magiq.html
+++ b/trips/magiq.html
@@ -45,7 +45,8 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div id="header"></div>
+            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
 <!--                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#begin">How It All Began</a>
@@ -72,7 +73,7 @@
                         <a class="page-scroll" href="#final">Final Thoughts</a>
                     </li>
                 </ul>
- -->            </div>
+            </div> -->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
