--- a/trips/magiq.html
+++ b/trips/magiq.html
@@ -280,6 +280,7 @@
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
 
+    <script src="../js/mustache.js"></script>
     <script src="../main.js"></script>
 </body>
 
