--- a/trips/tokyo.html
+++ b/trips/tokyo.html
@@ -46,7 +46,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="header"></div>
-            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 <!--                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#begin">How It All Began</a>
@@ -73,7 +73,7 @@
                         <a class="page-scroll" href="#final">Final Thoughts</a>
                     </li> 
                 </ul> -->
-            <!-- </div> -->
+            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
@@ -623,6 +623,7 @@
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
 
+    <script src="../js/mustache.js"></script>
     <script src="../main.js"></script>
 </body>
 
