did templates for other adventures

--- a/trips/sandiego.html
+++ b/trips/sandiego.html
@@ -46,7 +46,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+<!--                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#begin">How It All Began</a>
                     </li>
@@ -71,7 +71,7 @@
                     <li>
                         <a class="page-scroll" href="#final">Final Thoughts</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -273,7 +273,9 @@
 
     <!-- Theme JavaScript -->
     <script src="../js/creative.min.js"></script>
-    <script src="main.js"></script>
+    
+    <script src="../js/mustache.js"></script>
+    <script src="../main.js"></script>
 </body>
 
 </html>
