--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
     <script src="js/creative.min.js"></script>
 
     <script src="js/mustache.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
