changed sd page to incomplete until i finish it. changed snow valley to incomplete as well

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -107,7 +107,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-6 col-sm-6 domestic">
-                    <a href="comingsoon.html" class="portfolio-box">
+                    <a href="incomplete.html" class="portfolio-box">
                         <img src="img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -154,7 +154,8 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6 domestic">
-                    <a href="trips/sandiego.html" class="portfolio-box">
+                    <!-- <a href="trips/sandiego.html" class="portfolio-box"> -->
+                    <a href="incomplete.html" class="portfolio-box">
                         <img src="img/sandiego/sandiego_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -214,7 +215,7 @@
                     <p>LinkedIn</p></a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="https://www.yelp.com/user_details?userid=_jqTa-3-fqmBxnkANJHtFw" target="_blank"><i class="fa fa-yelp fa-5x sr-contact"></i>
+                    <a href="https://www.brianfong.yelp.com" target="_blank"><i class="fa fa-yelp fa-5x sr-contact"></i>
                     <p>Yelp</p></a>
                 </div>     
                 <div class="col-md-3 text-center">
