Finished snow valley page

--- a/adventures/trips/snowvalley.html
+++ b/adventures/trips/snowvalley.html
@@ -46,7 +46,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-   <!--              <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#begin">How It All Began</a>
                     </li>
@@ -71,7 +71,7 @@
                     <li>
                         <a class="page-scroll" href="#final">Final Thoughts</a>
                     </li>
-                </ul> -->
+                </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -95,7 +95,13 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">How It All Began</h2>
                     <hr class="light">
-                    <p class="text-faded"></p>
+                    <p class="text-faded">My good friend Brian asked me one day if I wanted to go snowboarding with his girlfriend and their friends. I had never been snowboarding but I was down to try it so I said yes. I love to plan so I started up a rough draft Google doc with him on the dates we'd go, the housing options, the resort location, and food and drink. The doc can be found <u><a style="color:black;" href="https://docs.google.com/document/d/1AQbFYRA1lV7TmRsxbN5MfujBL2eiV1pamCSbRJNuIbc/edit" target="_blank">here</a></u>. I actually suggested that Brian invite our other friend James since he's in the San Diego area as well but he didn't want to because he thought all James would want to do is drink.<br><br>
+
+                    I joined a facebook group chat with a group of people who were potentially going. Eventually, people backed out and so there were only six people who were going: me, Brian, Vivian (Brian's girlfriend), Shaina (Vivian's friend), Mylinh (Vivian's friend), and Demi (Vivian's sister). We decided that I would drive because Brian's car wouldn't be able to (two door stick shift car) and Vivian's car is going to be used but because we had 6, we would need two cars.<br><br>
+
+                    We had to figure out the ride situation because I was in LA and all of them would be in the OC. We decided that Brian and Vivian would drive up to me in LA and then I would drive to the Airbnb. I had to buy snow chains in the case that they were required to go up the mountain. It turned out that they were not needed but it was good having that peace of mind.<br><br>
+
+                    On the day we were planning to leave, Brian and Vivian were supposed to get to me by 3pm and I would leave work a couple hours earlier. They had to buy all the food too. However, they didn't LEAVE until 4pm and so we ended up leaving at around 5:30pm, right in the middle of traffic. I wanted to leave earlier so I didn't need to drive in the darkness as much, but it's okay because Brian was able to keep me company during the drive.</p>
                 </div>
             </div>
         </div>
@@ -107,7 +113,19 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Trip</h2>
                     <hr class="light">
-                    <p class="text-faded"></p>
+                    <p class="text-faded">Because we left right in the middle of rush hour traffic, it took an hour longer than usual to get there, and we arrived at around 8pm. The drive up was very windy and that took a while but I didn't want to rush it. The other car (Shaina, Mylinh, Demi) were already there watching TV when we got there. We brought all of our stuff from the car and we just relaxed while Brian and Vivian made spaghetti and meatballs. We found out that there was no wifi in the place but there was an ethernet cable. Good thing that Demi had her laptop so she could do her homework and we could watch movies. They also had cable TV so we watched whatever was on.<br><br>
+
+                    Someone brought Jenga so I decided that we should play. A couple of people played, and the rule was that the loser had to take a shot. I lost the first one but Mylinh was nice enough to take a shot with me. We played another round and I think Mylinh lost but I decided to take a shot with her. We played King's Cup because a couple of people hadn't played before. Brian took a couple shots and he was done and ended up throwing up in the bathroom. I drank a decent amount but I didn't pass out which is good. I found out that Mylinh liked country music as well, so we just started talking about our favorite artists and songs and started playing songs that we liked.<br><br>
+
+                    The next morning, Brian and I woke up to make breakfast for everyone. We decided before the trip that we would make the Gordon Ramsay eggs (video <u><a href="https://www.youtube.com/watch?v=PUP7U5vTMM0" target="_blank">here</a></u>). I thought I made them pretty well but they were out a little bit so they got cold before we could serve them. We then got ready to go to the snowboarding rental place. I rented for two days which totaled $80. I was able to borrow goggles and gloves from Shaina so I saved a little there. We got to the resort and bought the lift tickets. We bought a pass that allowed us to get lift tickets for half the price. After we changed into our gear, we got onto the snow and I learned how to walk around on the board.<br><br>
+                    
+                    We got onto the lift to the kiddie slope. Brian gave me some advice on what to do and how to get off the lift. I was nervous putting on my snowboard but eventually I got the hang of it. They then decided to go on the more difficult slope and I didn't know if I was ready or not but I couldn't persuade them and didn't want to hold them back. We went on the lift and I was still so bad getting off the lift. I was really scared at first but I was slowly getting the hang of it. And when I started getting the hang of it, it started becoming really fun! By the end of the day, I had the confidence to go down with decent speed and the ability to stop.<br><br>
+
+                    After we left the resort, we went back and Brian and Vivian made clam chowder. I was so tired since I had only three hours of sleep the night before so the drive back was really rough. I ended up eating a little bit of dinner and then took a nap when everyone else was watching Westworld. I woke up from my nap to them playing The Train Game. I still felt a little groggy but I wasn't just gonna not drink. So I got myself a beer and ate some food and recommended that we played rage cage since some of them hadn't played before. We didn't fill the cups with water or beer but we just played. By this time everyone was tired so we just called it a night.<br><br>
+
+                    On our second day snowboarding, I picked up right where I left off and I even learned how to get off the lift better without falling. Brian told me that he was really surprised how quickly I was picking it up. He said that where I was on my first time snowboarding was where he was on his second or third time snowboarding. The resort closed at 4pm on Sunday so we left around that time. It took forever to get out of the parking lot and to the rental place to return our equipment. We decided to go to KBBQ for dinner and we decided on Red Castle 3 in Rowland Heights.<br><br>
+
+                    We met Angie and Ryan (more of their friends) at Red Castle and we ate. I cooked (as usual) and I found out that Ryan knew Rebecca Hom as well. We started going on and on about stories about her and I don't think I've laughed that much in a while. It was such a great time. We had Half and Half afterwards while everyone gave each other their belated Christmas presents. Then we said our goodbyes and I drove to LA while they drove back to the OC.</p>
                 </div>
             </div>
         </div>
@@ -133,13 +151,23 @@
                         </ol>
                       
                         <figure class="item active text-faded">
-                          <img src="../img/tokyo/slideshow/1.jpg">
-                            <figcaption>First meal on the flight: grilled salmon with Japanese omelette.</figcaption>
+                          <img src="../img/snowvalley/slideshow/1.jpg">
+                            <figcaption>Friday night of the trip while playing King's Cup. Mylinh: "Let's take a picture before we get drunk"</figcaption>
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/tokyo/slideshow/2.jpg">
-                            <figcaption>Second meal on the flight: grilled beef sirloin.</figcaption>
+                          <img src="../img/snowvalley/slideshow/2.jpg">
+                            <figcaption>Saturday at the kiddie slopes. Right before I started learning.</figcaption>
+                        </figure>
+
+                        <figure class="item text-faded">
+                          <img src="../img/snowvalley/slideshow/3.jpg">
+                            <figcaption>Saturday at the more difficult slope. Just as I was getting the hang of snowboarding.</figcaption>
+                        </figure>
+
+                        <figure class="item text-faded">
+                          <img src="../img/snowvalley/slideshow/4.jpg" class="resize">
+                            <figcaption>Sunday at the slopes.</figcaption>
                         </figure>
 
                       <!-- Left and right controls -->
@@ -166,7 +194,10 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
+                            <li><p>Brian told me that the last time he went snowboarding, he saw someone talking to a GoPro saying stuff like "Thank you to all my supporters. If you liked the video please click like and favorite." so when we had the GoPro, we were copying that guy and saying thank you to our supporters. We thought we did pretty well so maybe we have a career in entertainment on YouTube!</p></li>
+                            <li><p>In our Airbnb there was a booklet that people who stayed there would write in talking about their experiences. There were some normal ones and there were also some weird ones. When Mylinh wrote in it and told me to sign, I also put "P.S. the ghost in your closet is very friendly!"</p></li>
+                            <li><p>Before we left Half and Half to go home, I went to the restroom and saw John Tran from work! What a coincidence that was. He called my name and he said he lived fifteen minutes from Rowland Heights. I knew he lived in the OC but I thought it was closer to the Irvine area.</p></li>
+                            <li><p>Brian bought some Jameson so we poured a little bit and drank it straight together because we're PEAKY FOOKIN BLAINDERS MATE. Jameson is by far my favorite drink.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -182,7 +213,8 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
+                            <li><p>Mylinh Thai Hoang.</p></li>
+                            <li><p>Snowboarding.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -198,7 +230,10 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
+                            <li><p>My pants and my back got wet from sitting down on the snow and falling. The snow pants helped prevent a lot of it, but eventually it seeped through. It wasn't a big deal but it felt uncomfortable driving back.</p></li>
+                            <li><p>There was no wifi in our Airbnb! It wasn't as big of a deal to me but it was just something we expect nowadays. Now when I'm booking Airbnbs I'm going to look for confirmation on whether there's going to be wifi or not.</p></li>
+                            <li><p>The smell of KBBQ on my clothes :(</p></li>
+                            <li><p>Saying goodbye.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -214,7 +249,12 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
+                            <li><p>Go with people who are willing to spend the time to teach you how to snowboard. Mylinh said that the first time she went, her friends took her to the big slopes and basically told her to fend for herself. She didn't have a good experience, but this time her friends taught her the right way!</p></li>
+                            <li><p>Go to the kiddie slopes to get used to snowboarding, but going to the bigger slopes to learn is the best way. This is what Brian told me and I thought it was weird but it couldn't have been truer.</p></li>
+                            <li><p>Wear a helmet! Before I went on the trip, my boss told me that his friend was airlifted off the slopes after bumping into someone. He wore a helmet and STILL got a concussion. Imagine if he didn't wear a helmet. I also read from someone on Reddit that he didn't wear a helmet and fell and now has permanent brain damage. Brian even said that he hit his head against the slow and his helmet broke the hit and how he was so grateful he rented the helmet. You might be a good snowboarder or not a speedy one, but it just takes one wrong move to hurt your head.</p></li>
+                            <li><p>Bring comfortable clothes! I did not know what to expect so I didn't pack as well as I could've, so I had to rewear the same clothes. That wasn't a big deal but if they had gotten really wet I would've been in big trouble. Bring sweatpants and long sleeves and heat tech pants and shirts if you have them.</p></li>
+                            <li><p>Take the safe route and get snow chains! You'll never know how the weather is gonna be and you don't want your car to get any damage, so find the right chains for your tires and keep them in your car. I recommend Pep Boys.</p></li>
+                            <li><p>If you like snowboarding and you see yourself going at least once a year, plan to buy snowboarding gear. They're a good investment and they don't get worse from sitting in storage somewhere. Brian bought all his stuff for like $300. That seems like a lot but I rented all my equipment for $80 for two days. He's already gotten a good chunk of his investment back and he's gonna get more of it when he goes more.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -228,7 +268,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Final Thoughts</h2>
                     <hr class="light">
-                    <p class="text-faded"> <i class="fa fa-square-o" aria-hidden="true"></i></p>
+                    <p class="text-faded">This was such a great trip for so many reasons. I met some great people. I learned how to snowboard. I'm even thinking about buying snowboarding gear because if this is an annual thing, I want to be a part of it. In the long run, I can see this being a life-changing trip and I am so glad I went. <i class="fa fa-square-o" aria-hidden="true"></i></p>
                     <br><br><a href="../index.html#adventures" class="btn btn-default btn-xl page-scroll">Back to all adventures</a>
                 </div>
             </div>
