--- a/adventures/incomplete.html
+++ b/adventures/incomplete.html
@@ -52,7 +52,7 @@
             <div class="header-content-inner">
                 <h2 id="homeHeading">Sorry, I haven't completed the write-up yet :(</h2>
                 <hr>
-                <p>This page is just a placeholder for trips that I have gone on but haven't finished writing how the trip went. I can either be too lazy or too busy to do it, but I'll try to finish as quickly as possible. Check back every once in a while to see if I've finished!</p>
+                <p>This page is a placeholder for trips that I have gone on but haven't finished writing how the trip went. I can either be too lazy or too busy to do it, but I'll try to finish as quickly as possible. Check back every once in a while to see if I've finished!</p>
                 <a href="index.html#adventures" class="btn btn-primary btn-xl page-scroll">Back to all adventures</a>
             </div>
         </div>
