--- a/adventures/index.html
+++ b/adventures/index.html
@@ -107,7 +107,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-6 col-sm-6 domestic">
-                    <a href="incomplete.html" class="portfolio-box">
+                    <a href="trips/snowvalley.html" class="portfolio-box">
                         <img src="img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
