Added more photos

--- a/adventures/trips/snowvalley.html
+++ b/adventures/trips/snowvalley.html
@@ -148,6 +148,8 @@
                             <li data-target="#myCarousel" data-slide-to="1"></li>
                             <li data-target="#myCarousel" data-slide-to="2"></li>
                             <li data-target="#myCarousel" data-slide-to="3"></li>
+                            <li data-target="#myCarousel" data-slide-to="4"></li>
+                            <li data-target="#myCarousel" data-slide-to="5"></li>
                         </ol>
                       
                         <figure class="item active text-faded">
@@ -168,6 +170,16 @@
                         <figure class="item text-faded">
                           <img src="../img/snowvalley/slideshow/4.jpg" class="resize">
                             <figcaption>Sunday at the slopes.</figcaption>
+                        </figure>
+
+                        <figure class="item text-faded">
+                          <img src="../img/snowvalley/slideshow/5.jpg" class="resize">
+                            <figcaption>Mylinh and me on the slopes.</figcaption>
+                        </figure>
+
+                        <figure class="item text-faded">
+                          <img src="../img/snowvalley/slideshow/6.jpg" class="resize">
+                            <figcaption>Mylinh and me again.</figcaption>
                         </figure>
 
                       <!-- Left and right controls -->
