--- a/adventures/trips/snowvalley.html
+++ b/adventures/trips/snowvalley.html
@@ -13,7 +13,7 @@
 
     <!-- sets a different background picture on each page -->
     <style type="text/css">
-        header {background-image:url(../img/header.jpg);"}
+        header {background-image:url(../img/snowvalley/snowvalley_main.jpg);"}
     </style>
 
     <!-- Bootstrap Core CSS -->
