Fixed orientation of pictures for snow valley

--- a/adventures/trips/snowvalley.html
+++ b/adventures/trips/snowvalley.html
@@ -173,12 +173,12 @@
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/snowvalley/slideshow/5.jpg" class="resize">
+                          <img src="../img/snowvalley/slideshow/5.jpg">
                             <figcaption>Mylinh and me on the slopes.</figcaption>
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/snowvalley/slideshow/6.jpg" class="resize">
+                          <img src="../img/snowvalley/slideshow/6.jpg" class="rotate90">
                             <figcaption>Mylinh and me again.</figcaption>
                         </figure>
 
