Removed main.js file to add back header transition

--- a/adventures/trips/snowvalley.html
+++ b/adventures/trips/snowvalley.html
@@ -303,7 +303,7 @@
     <script src="../js/creative.min.js"></script>
 
     <script src="../js/mustache.js"></script>
-    <script src="../main.js"></script>    
+    <!-- <script src="../main.js"></script>     -->
 </body>
 
 </html>
